updated refactor nb

--- a/04_model_pipeline_dev/refactor_0528.ipynb
+++ b/04_model_pipeline_dev/refactor_0528.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-31T04:28:27.738385Z",
-     "start_time": "2019-05-31T04:28:27.735031Z"
+     "end_time": "2019-06-01T20:10:46.319444Z",
+     "start_time": "2019-06-01T20:10:46.316636Z"
     },
     "run_control": {
      "marked": false
@@ -14,13 +14,15 @@
    },
    "outputs": [],
    "source": [
-    "# !mkdir spark_data\n",
     "# for schema in ['football_games','labels','features']:\n",
+    "#     os.mkdir(schema)\n",
     "#     for tbl in spark.sql(f'SHOW TABLES in {schema}').toPandas()\\\n",
     "#                 [['database','tableName']].apply(lambda x: '.'.join(x), axis=1)\\\n",
     "#                 .values:\n",
     "#         print(tbl)\n",
-    "#         spark.sql(f'SELECT * FROM {tbl}').toPandas().to_csv(f'spark_data/{tbl}.csv', index=False)"
+    "#         spark.sql(f'SELECT * FROM {tbl}').toPandas().to_csv(\n",
+    "#                         '{}/{}.csv'.format(*tbl.split('.')), index=False\n",
+    "#                     )"
    ]
   },
   {
@@ -28,8 +30,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-31T04:28:27.769501Z",
-     "start_time": "2019-05-31T04:28:27.741853Z"
+     "end_time": "2019-06-01T20:10:46.352228Z",
+     "start_time": "2019-06-01T20:10:46.322133Z"
     }
    },
    "outputs": [],
@@ -43,8 +45,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-31T04:28:33.306108Z",
-     "start_time": "2019-05-31T04:28:27.772257Z"
+     "end_time": "2019-06-01T20:10:52.225965Z",
+     "start_time": "2019-06-01T20:10:46.354592Z"
     }
    },
    "outputs": [
@@ -73,8 +75,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-31T04:28:33.345474Z",
-     "start_time": "2019-05-31T04:28:33.307812Z"
+     "end_time": "2019-06-01T20:10:52.267876Z",
+     "start_time": "2019-06-01T20:10:52.228027Z"
     }
    },
    "outputs": [],
@@ -91,8 +93,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-31T04:28:33.383110Z",
-     "start_time": "2019-05-31T04:28:33.348012Z"
+     "end_time": "2019-06-01T20:10:52.311441Z",
+     "start_time": "2019-06-01T20:10:52.270527Z"
     }
    },
    "outputs": [],
@@ -106,8 +108,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-31T04:28:33.714279Z",
-     "start_time": "2019-05-31T04:28:33.384572Z"
+     "end_time": "2019-06-01T20:10:52.810779Z",
+     "start_time": "2019-06-01T20:10:52.313120Z"
     },
     "run_control": {
      "marked": true
@@ -128,8 +130,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-31T04:28:33.751742Z",
-     "start_time": "2019-05-31T04:28:33.715917Z"
+     "end_time": "2019-06-01T20:10:52.850857Z",
+     "start_time": "2019-06-01T20:10:52.812227Z"
     }
    },
    "outputs": [],
@@ -330,40 +332,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 81,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-31T04:29:02.752999Z",
-     "start_time": "2019-05-31T04:28:38.832356Z"
+     "end_time": "2019-06-02T02:14:20.448791Z",
+     "start_time": "2019-06-02T02:14:20.387527Z"
+    },
+    "run_control": {
+     "marked": false
     }
    },
    "outputs": [],
    "source": [
     "outdir = '/Users/joshplotkin/Dropbox/data_science/modeling-football-outcomes/models/0528_dev'\n",
     "\n",
-    "model_dict = json.load(open(f'{path}/model.json'))\n",
-    "cv = CVData(model_dict, spark)\n",
-    "cv.generate_cv_data()\n",
-    "model_data = cv.get_csv_data(write_dir=outdir)"
+    "model_dict = json.load(open(f'{path}/model.json'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 82,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-31T04:29:02.819491Z",
-     "start_time": "2019-05-31T04:29:02.755489Z"
+     "end_time": "2019-06-02T02:14:37.382242Z",
+     "start_time": "2019-06-02T02:14:20.623078Z"
+    },
+    "run_control": {
+     "marked": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "cv = CVData(model_dict, spark)\n",
+    "### tmp\n",
+    "os.chdir('/Users/joshplotkin/Dropbox/data_science/modeling-football-outcomes')\n",
+    "cv_data = cv.get_cv_data()\n",
+    "\n",
+    "datasets = cv.assign_group(cv_data, 'dataset')\n",
+    "datasets = cv.modify_group_for_dim(datasets, 'dataset')\n",
+    "\n",
+    "# assert (1) training set is not empty\n",
+    "# (2) either k-fold or scoring set is not empty\n",
+    "assert datasets[datasets['dataset'] == 'in_training'].shape[0] > 0\n",
+    "\n",
+    "training_rows = datasets[datasets['dataset'] == 'in_training']\n",
+    "scoring_rows = datasets[datasets['dataset'].isin(['scoring_only','holdout'])]\n",
+    "\n",
+    "training_rows = cv.assign_k_folds(training_rows)\n",
+    "training, scoring_only = cv.get_training_scoring_sets(training_rows, scoring_rows)\n",
+    "\n",
+    "cv.training = training\n",
+    "\n",
+    "cv.scoring_only = scoring_only[\n",
+    "    scoring_only['dataset'] == 'scoring_only'\n",
+    "].drop('dataset', axis=1)\n",
+    "\n",
+    "cv.holdout = scoring_only[\n",
+    "    scoring_only['dataset'] == 'holdout'\n",
+    "].drop('dataset', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-02T02:14:37.460601Z",
+     "start_time": "2019-06-02T02:14:37.385012Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "training 1531\n",
-      "scoring_only 0\n",
-      "holdout 331\n"
+     "ename": "NameError",
+     "evalue": "name 'model_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-83-0e208bf118be>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmodel_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'model_data' is not defined"
      ]
     }
    ],
@@ -391,7 +438,6 @@
    "outputs": [],
    "source": [
     "model = TrainAndScoreModel(model_dict)\n",
-    "model.init_model()\n",
     "model.cv_score(model_data['training'], \n",
     "               model_data['scoring_only'])"
    ]
@@ -1141,12 +1187,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### \"Where do we miss?\" in Evaluation??\n",
-    "* week id\n",
-    "* season\n",
-    "* team?\n",
-    "* by spread, ML\n",
-    "* by O/U"
+    "## Next Steps:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Remove spark dependency"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Move JSON checker into a file and have it called from command line (within the notebook) with model.json and plots.json locations as command-line args"
    ]
   },
   {
@@ -1160,7 +1215,265 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Move feature importance out of train_score"
+    "### regression\n",
+    "* training should be straightforward\n",
+    "* evaluation\n",
+    " * make a residuals plot\n",
+    " * step to do classification from the scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Move feature importance out of train_score\n",
+    "* permutation importance? other packages?\n",
+    "* take plotting routine from existing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \"Where do we miss?\" in Evaluation??\n",
+    "* week id\n",
+    "* season\n",
+    "* team?\n",
+    "* by spread, ML\n",
+    "* by O/U"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bagging\n",
+    "* bagged feature importance\n",
+    "\n",
+    "### Feature Contributions w/ SHAP and LIME"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Figure out how to do week 1, older years, etc.\n",
+    "* maybe simpler model that doesn't have things like DVOA... can train on all the data, and use to score week 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Figure out what to do about which rows to use, how to do the home vs. visitor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-01T17:08:25.380960Z",
+     "start_time": "2019-06-01T17:08:25.343022Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/joshplotkin/Dropbox/data_science/modeling-football-outcomes'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-01T17:08:27.952191Z",
+     "start_time": "2019-06-01T17:08:27.900954Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "label_cols = set(model_dict['index'])\\\n",
+    "             | set(model_dict['strata_cols'])\\\n",
+    "             | set([model_dict['label_col']])\n",
+    "labels_prep = pd.read_csv('data/{}/{}.csv'\n",
+    "                          .format(*model_dict['labels_tbl'].split('.')))\\\n",
+    "                .loc[:, label_cols]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-01T17:14:52.988192Z",
+     "start_time": "2019-06-01T17:14:52.931972Z"
+    },
+    "run_control": {
+     "marked": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def binarize_label(x):\n",
+    "    if x in model_dict['pos_labels']: #self\n",
+    "        return 1\n",
+    "    elif x in model_dict['neg_labels']:\n",
+    "        return 0\n",
+    "    return None\n",
+    "\n",
+    "nrows = labels_prep.shape[0]\n",
+    "np.random.seed(model_dict['dataset_seed'])\n",
+    "labels_prep['dataset_rnd'] = np.random.random(nrows)\n",
+    "labels_prep['dim_rnd'] = np.random.random(nrows)\n",
+    "np.random.seed(model_dict['kfold_seed'])\n",
+    "labels_prep['kfold_rnd'] = np.random.random(nrows)\n",
+    "np.random.seed(None)\n",
+    "labels_prep['label'] = labels_prep[model_dict['label_col']].map(binarize_label)\n",
+    "labels_prep = labels_prep[~labels_prep['label'].isnull()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-01T17:14:54.250262Z",
+     "start_time": "2019-06-01T17:14:54.202338Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>game_id</th>\n",
+       "      <th>did_win</th>\n",
+       "      <th>did_cover_sbr</th>\n",
+       "      <th>week_id</th>\n",
+       "      <th>season</th>\n",
+       "      <th>dataset_rnd</th>\n",
+       "      <th>dim_rnd</th>\n",
+       "      <th>kfold_rnd</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>200909140nwe</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>0.010374</td>\n",
+       "      <td>0.582034</td>\n",
+       "      <td>0.672279</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>200911150oti</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>0.501875</td>\n",
+       "      <td>0.726845</td>\n",
+       "      <td>0.488078</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>200912270atl</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>0.495773</td>\n",
+       "      <td>0.216486</td>\n",
+       "      <td>0.825495</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>200912130kan</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>0.133830</td>\n",
+       "      <td>0.967710</td>\n",
+       "      <td>0.031446</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>201001030min</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>0.142111</td>\n",
+       "      <td>0.295841</td>\n",
+       "      <td>0.808050</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        game_id  did_win  did_cover_sbr  week_id  season  dataset_rnd  \\\n",
+       "0  200909140nwe        1             -1        1    2009     0.010374   \n",
+       "1  200911150oti        1              1       10    2009     0.501875   \n",
+       "2  200912270atl        1              1       16    2009     0.495773   \n",
+       "3  200912130kan       -1             -1       14    2009     0.133830   \n",
+       "4  201001030min        1              1       17    2009     0.142111   \n",
+       "\n",
+       "    dim_rnd  kfold_rnd  label  \n",
+       "0  0.582034   0.672279      1  \n",
+       "1  0.726845   0.488078      1  \n",
+       "2  0.216486   0.825495      1  \n",
+       "3  0.967710   0.031446      0  \n",
+       "4  0.295841   0.808050      1  "
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels_prep.head()"
    ]
   },
   {
@@ -1168,9 +1481,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "###"
-   ]
+   "source": []
   }
  ],
  "metadata": {
