--- a/config/initialize_nospark.ipynb
+++ b/config/initialize_nospark.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-02T02:40:58.293706Z",
-     "start_time": "2019-06-02T02:40:58.276780Z"
+     "end_time": "2019-08-26T13:17:18.581585Z",
+     "start_time": "2019-08-26T13:17:18.544065Z"
     },
     "run_control": {
      "marked": true
@@ -34,8 +34,6 @@
     }
    ],
    "source": [
-    "from __future__ import division\n",
-    "\n",
     "from cycler import cycler\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
@@ -53,7 +51,8 @@
     "plt.style.use('fivethirtyeight')\n",
     "%matplotlib inline\n",
     "\n",
-    "os.chdir('/Users/joshplotkin/Dropbox/data_science/football_data')\n",
+    "user=!whoami\n",
+    "os.chdir('/Users/{}/Dropbox/data_science/football_data'.format(user[0]))\n",
     "sys.path.append('../modeling-football-outcomes/config')\n",
     "\n",
     "from mpl_style import *"
