remove hardcoded path

--- a/config/initialize_nospark.ipynb
+++ b/config/initialize_nospark.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-26T13:17:18.581585Z",
-     "start_time": "2019-08-26T13:17:18.544065Z"
+     "end_time": "2019-08-30T02:07:32.074094Z",
+     "start_time": "2019-08-30T02:07:30.675730Z"
     },
     "run_control": {
      "marked": true
@@ -51,12 +51,22 @@
     "plt.style.use('fivethirtyeight')\n",
     "%matplotlib inline\n",
     "\n",
-    "user=!whoami\n",
-    "os.chdir('/Users/{}/Dropbox/data_science/football_data'.format(user[0]))\n",
-    "sys.path.append('../modeling-football-outcomes/config')\n",
+    "user = !whoami\n",
+    "user = user[0]\n",
+    "ROOT=f'/Users/{user}/Dropbox/data_science/'\\\n",
+    "    'modeling-football-outcomes'\n",
+    "\n",
+    "sys.path.append(f'{ROOT}/config')\n",
     "\n",
     "from mpl_style import *"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
