modified base model name to not clash

--- a/notebooks/model_execution/generate_config_for_model_and_ensemble_classification.ipynb
+++ b/notebooks/model_execution/generate_config_for_model_and_ensemble_classification.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:30.343082Z",
-     "start_time": "2019-08-30T14:33:30.316904Z"
+     "end_time": "2019-08-30T14:46:41.956115Z",
+     "start_time": "2019-08-30T14:46:41.932399Z"
     }
    },
    "outputs": [],
@@ -27,8 +27,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:30.367588Z",
-     "start_time": "2019-08-30T14:33:30.345717Z"
+     "end_time": "2019-08-30T14:46:41.975288Z",
+     "start_time": "2019-08-30T14:46:41.958149Z"
     }
    },
    "outputs": [],
@@ -43,8 +43,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:32.494386Z",
-     "start_time": "2019-08-30T14:33:30.371584Z"
+     "end_time": "2019-08-30T14:46:43.925431Z",
+     "start_time": "2019-08-30T14:46:41.978353Z"
     }
    },
    "outputs": [
@@ -74,8 +74,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:34.461244Z",
-     "start_time": "2019-08-30T14:33:32.497821Z"
+     "end_time": "2019-08-30T14:46:45.751314Z",
+     "start_time": "2019-08-30T14:46:43.929294Z"
     }
    },
    "outputs": [],
@@ -90,8 +90,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:34.524738Z",
-     "start_time": "2019-08-30T14:33:34.462863Z"
+     "end_time": "2019-08-30T14:46:45.807871Z",
+     "start_time": "2019-08-30T14:46:45.753287Z"
     }
    },
    "outputs": [],
@@ -113,14 +113,14 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:34.579032Z",
-     "start_time": "2019-08-30T14:33:34.526890Z"
+     "end_time": "2019-08-30T14:46:45.857340Z",
+     "start_time": "2019-08-30T14:46:45.809718Z"
     }
    },
    "outputs": [],
    "source": [
     "MODELS_DIR='models'\n",
-    "MODEL_ID = '{}_regression'.format(str(date.today()))"
+    "MODEL_ID = '{}_classification'.format(str(date.today()))"
    ]
   },
   {
@@ -135,8 +135,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:34.635171Z",
-     "start_time": "2019-08-30T14:33:34.581019Z"
+     "end_time": "2019-08-30T14:46:45.908177Z",
+     "start_time": "2019-08-30T14:46:45.859838Z"
     }
    },
    "outputs": [],
@@ -162,8 +162,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:34.704285Z",
-     "start_time": "2019-08-30T14:33:34.639381Z"
+     "end_time": "2019-08-30T14:46:45.959451Z",
+     "start_time": "2019-08-30T14:46:45.911594Z"
     }
    },
    "outputs": [],
@@ -177,8 +177,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:34.914375Z",
-     "start_time": "2019-08-30T14:33:34.708362Z"
+     "end_time": "2019-08-30T14:46:46.100248Z",
+     "start_time": "2019-08-30T14:46:45.962685Z"
     }
    },
    "outputs": [
@@ -215,8 +215,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:34.997100Z",
-     "start_time": "2019-08-30T14:33:34.917161Z"
+     "end_time": "2019-08-30T14:46:46.152005Z",
+     "start_time": "2019-08-30T14:46:46.101801Z"
     }
    },
    "outputs": [],
@@ -257,8 +257,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:35.076546Z",
-     "start_time": "2019-08-30T14:33:35.001124Z"
+     "end_time": "2019-08-30T14:46:46.202147Z",
+     "start_time": "2019-08-30T14:46:46.154028Z"
     }
    },
    "outputs": [],
@@ -303,8 +303,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:35.148394Z",
-     "start_time": "2019-08-30T14:33:35.081446Z"
+     "end_time": "2019-08-30T14:46:46.253931Z",
+     "start_time": "2019-08-30T14:46:46.204175Z"
     }
    },
    "outputs": [],
@@ -369,8 +369,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:35.210787Z",
-     "start_time": "2019-08-30T14:33:35.150727Z"
+     "end_time": "2019-08-30T14:46:46.304428Z",
+     "start_time": "2019-08-30T14:46:46.256372Z"
     }
    },
    "outputs": [],
@@ -398,8 +398,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:35.269330Z",
-     "start_time": "2019-08-30T14:33:35.212661Z"
+     "end_time": "2019-08-30T14:46:46.356998Z",
+     "start_time": "2019-08-30T14:46:46.305961Z"
     }
    },
    "outputs": [],
@@ -433,8 +433,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:35.325714Z",
-     "start_time": "2019-08-30T14:33:35.271157Z"
+     "end_time": "2019-08-30T14:46:46.404341Z",
+     "start_time": "2019-08-30T14:46:46.358929Z"
     }
    },
    "outputs": [],
@@ -465,8 +465,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:35.381294Z",
-     "start_time": "2019-08-30T14:33:35.327997Z"
+     "end_time": "2019-08-30T14:46:46.454565Z",
+     "start_time": "2019-08-30T14:46:46.406686Z"
     }
    },
    "outputs": [
@@ -501,8 +501,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:35.431836Z",
-     "start_time": "2019-08-30T14:33:35.383612Z"
+     "end_time": "2019-08-30T14:46:46.504573Z",
+     "start_time": "2019-08-30T14:46:46.456578Z"
     }
    },
    "outputs": [],
@@ -528,8 +528,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:35.495050Z",
-     "start_time": "2019-08-30T14:33:35.434024Z"
+     "end_time": "2019-08-30T14:46:46.554403Z",
+     "start_time": "2019-08-30T14:46:46.506554Z"
     }
    },
    "outputs": [],
@@ -558,8 +558,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:35.566141Z",
-     "start_time": "2019-08-30T14:33:35.500535Z"
+     "end_time": "2019-08-30T14:46:46.605326Z",
+     "start_time": "2019-08-30T14:46:46.557048Z"
     }
    },
    "outputs": [],
@@ -582,8 +582,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:35.628711Z",
-     "start_time": "2019-08-30T14:33:35.568603Z"
+     "end_time": "2019-08-30T14:46:46.651843Z",
+     "start_time": "2019-08-30T14:46:46.607834Z"
     }
    },
    "outputs": [],
@@ -603,8 +603,8 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:35.687163Z",
-     "start_time": "2019-08-30T14:33:35.631671Z"
+     "end_time": "2019-08-30T14:46:46.698633Z",
+     "start_time": "2019-08-30T14:46:46.654157Z"
     }
    },
    "outputs": [],
@@ -620,8 +620,8 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:35.747703Z",
-     "start_time": "2019-08-30T14:33:35.689625Z"
+     "end_time": "2019-08-30T14:46:46.749370Z",
+     "start_time": "2019-08-30T14:46:46.701401Z"
     }
    },
    "outputs": [],
@@ -655,8 +655,8 @@
    "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:35.826340Z",
-     "start_time": "2019-08-30T14:33:35.752895Z"
+     "end_time": "2019-08-30T14:46:46.805353Z",
+     "start_time": "2019-08-30T14:46:46.752711Z"
     }
    },
    "outputs": [
@@ -691,8 +691,8 @@
    "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:35.890650Z",
-     "start_time": "2019-08-30T14:33:35.829857Z"
+     "end_time": "2019-08-30T14:46:46.861562Z",
+     "start_time": "2019-08-30T14:46:46.808070Z"
     }
    },
    "outputs": [],
@@ -728,8 +728,8 @@
    "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:35.958326Z",
-     "start_time": "2019-08-30T14:33:35.893801Z"
+     "end_time": "2019-08-30T14:46:46.916314Z",
+     "start_time": "2019-08-30T14:46:46.863819Z"
     }
    },
    "outputs": [],
@@ -750,8 +750,8 @@
    "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:36.035741Z",
-     "start_time": "2019-08-30T14:33:35.961392Z"
+     "end_time": "2019-08-30T14:46:46.963874Z",
+     "start_time": "2019-08-30T14:46:46.918613Z"
     }
    },
    "outputs": [],
@@ -781,8 +781,8 @@
    "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:36.115621Z",
-     "start_time": "2019-08-30T14:33:36.039022Z"
+     "end_time": "2019-08-30T14:46:47.015531Z",
+     "start_time": "2019-08-30T14:46:46.965869Z"
     }
    },
    "outputs": [
@@ -818,8 +818,8 @@
    "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:36.213047Z",
-     "start_time": "2019-08-30T14:33:36.121065Z"
+     "end_time": "2019-08-30T14:46:47.062761Z",
+     "start_time": "2019-08-30T14:46:47.017359Z"
     }
    },
    "outputs": [],
@@ -855,8 +855,8 @@
    "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:36.289161Z",
-     "start_time": "2019-08-30T14:33:36.216260Z"
+     "end_time": "2019-08-30T14:46:47.112054Z",
+     "start_time": "2019-08-30T14:46:47.065157Z"
     }
    },
    "outputs": [
@@ -889,8 +889,8 @@
    "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:36.401739Z",
-     "start_time": "2019-08-30T14:33:36.296308Z"
+     "end_time": "2019-08-30T14:46:47.162661Z",
+     "start_time": "2019-08-30T14:46:47.114291Z"
     },
     "run_control": {
      "marked": true
@@ -929,8 +929,8 @@
    "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:36.460163Z",
-     "start_time": "2019-08-30T14:33:36.404519Z"
+     "end_time": "2019-08-30T14:46:47.213089Z",
+     "start_time": "2019-08-30T14:46:47.164594Z"
     }
    },
    "outputs": [
@@ -965,8 +965,8 @@
    "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:36.520268Z",
-     "start_time": "2019-08-30T14:33:36.462596Z"
+     "end_time": "2019-08-30T14:46:47.267272Z",
+     "start_time": "2019-08-30T14:46:47.215127Z"
     }
    },
    "outputs": [],
@@ -1001,8 +1001,8 @@
    "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:36.577685Z",
-     "start_time": "2019-08-30T14:33:36.524241Z"
+     "end_time": "2019-08-30T14:46:47.321823Z",
+     "start_time": "2019-08-30T14:46:47.269811Z"
     }
    },
    "outputs": [],
@@ -1041,8 +1041,8 @@
    "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:36.644072Z",
-     "start_time": "2019-08-30T14:33:36.580158Z"
+     "end_time": "2019-08-30T14:46:47.374636Z",
+     "start_time": "2019-08-30T14:46:47.323873Z"
     }
    },
    "outputs": [
@@ -1076,8 +1076,8 @@
    "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:36.694578Z",
-     "start_time": "2019-08-30T14:33:36.646581Z"
+     "end_time": "2019-08-30T14:46:47.428712Z",
+     "start_time": "2019-08-30T14:46:47.376548Z"
     }
    },
    "outputs": [],
@@ -1110,15 +1110,15 @@
    "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:36.753202Z",
-     "start_time": "2019-08-30T14:33:36.696260Z"
+     "end_time": "2019-08-30T14:46:47.481438Z",
+     "start_time": "2019-08-30T14:46:47.431532Z"
     }
    },
    "outputs": [],
    "source": [
     "ensemble_dict_load_cv = {}\n",
     "ensemble_dict_load_cv['models_dir'] = f'models'\n",
-    "ensemble_dict_load_cv['ensemble_model_id'] = 'ensemble_load_cv'\n",
+    "ensemble_dict_load_cv['ensemble_model_id'] = 'classification_ensemble_load_cv'\n",
     "ensemble_dict_load_cv['load_cv_data_from'] = ensemble_dict['ensemble_model_id']\n",
     "ensemble_dict_load_cv['number_of_models'] = 5\n",
     "ensemble_dict_load_cv['save'] = {'scores': True}\n",
@@ -1151,8 +1151,8 @@
    "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:36.804615Z",
-     "start_time": "2019-08-30T14:33:36.755389Z"
+     "end_time": "2019-08-30T14:46:47.535405Z",
+     "start_time": "2019-08-30T14:46:47.483617Z"
     }
    },
    "outputs": [],
@@ -1192,8 +1192,8 @@
    "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:36.856936Z",
-     "start_time": "2019-08-30T14:33:36.806560Z"
+     "end_time": "2019-08-30T14:46:47.586387Z",
+     "start_time": "2019-08-30T14:46:47.537139Z"
     }
    },
    "outputs": [
@@ -1220,8 +1220,8 @@
    "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-30T14:33:36.906048Z",
-     "start_time": "2019-08-30T14:33:36.859183Z"
+     "end_time": "2019-08-30T14:46:47.639302Z",
+     "start_time": "2019-08-30T14:46:47.588207Z"
     },
     "run_control": {
      "marked": true
