--- a/notebooks/model_execution/generate_config_for_model_and_ensemble_regression.ipynb
+++ b/notebooks/model_execution/generate_config_for_model_and_ensemble_regression.ipynb
@@ -1154,7 +1154,7 @@
    "source": [
     "ensemble_dict_load_cv = {}\n",
     "ensemble_dict_load_cv['models_dir'] = f'models'\n",
-    "ensemble_dict_load_cv['ensemble_model_id'] = 'ensemble_load_cv'\n",
+    "ensemble_dict_load_cv['ensemble_model_id'] = 'regression_ensemble_load_cv'\n",
     "ensemble_dict_load_cv['load_cv_data_from'] = ensemble_dict['ensemble_model_id']\n",
     "ensemble_dict_load_cv['number_of_models'] = 5\n",
     "ensemble_dict_load_cv['save'] = {'scores': True}\n",
