--- a/notebooks/05_feature_engineering/00_plan_and_ideas.ipynb
+++ b/notebooks/05_feature_engineering/00_plan_and_ideas.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-18T03:04:51.161940Z",
-     "start_time": "2019-01-18T03:04:45.551263Z"
+     "end_time": "2019-08-30T19:55:23.919723Z",
+     "start_time": "2019-08-30T19:55:22.660647Z"
     }
    },
    "outputs": [
@@ -24,7 +24,11 @@
     }
    ],
    "source": [
-    "%run ../config/initialize.ipynb"
+    "import os\n",
+    "ROOT='../..'\n",
+    "os.chdir(ROOT)\n",
+    "\n",
+    "%run config/initialize_nospark.ipynb"
    ]
   },
   {
@@ -217,21 +221,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
