--- a/notebooks/05_feature_engineering/combine_features.ipynb
+++ b/notebooks/05_feature_engineering/combine_features.ipynb
@@ -24,7 +24,11 @@
     }
    ],
    "source": [
-    "%run ../config/initialize.ipynb"
+    "import os\n",
+    "ROOT='../..'\n",
+    "os.chdir(ROOT)\n",
+    "\n",
+    "%run config/initialize.ipynb"
    ]
   },
   {
